# LSP-tanks-lobbyserv

./: .gitignore  Makefile.am  configure.ac
data/: tls.conf
src/: client.c  client.h  lobby.h  main.c
src/tests/: test_client.c
